# mvm2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: app.py
src/: config.py  main.py
src/api/: pdf_report.py  routes.py
src/models/: __init__.py  problem.py  solution.py  verification.py
src/pipeline/: confidence.py  consensus.py  error_resolver.py  input_processor.py  orchestrator.py  reparser.py  solver.py  step_aligner.py  step_parser.py
src/prompts/: code_gen_prompt.py  debate_prompt.py  solver_prompt.py
src/providers/: base.py  gemini.py  openai_compat.py  registry.py
src/symbolic/: answer_verifier.py  code_generator.py  sandbox.py  verifier.py
